correct a small typo

--- a/website/htdocs/index.html
+++ b/website/htdocs/index.html
@@ -23,7 +23,7 @@ GGI, Allegro, aalib, libcaca, TWin, and Carbon.</p>
 href="http://sourceforge.net/projects/myman/">MyMan project page</a>
 at SourceForge for recent releases.</p>
 
-<p>Older versions (including th original public-domain version) can
+<p>Older versions (including the original public-domain version) can
 still be found on <a
 href="http://geocities.com/bsittler/#myman">bsittler's Home
 Page</a>.</p>
