--- a/website/htdocs/index.html
+++ b/website/htdocs/index.html
@@ -17,7 +17,10 @@ href="http://www.namco.co.jp/">Namco</a>'s
 <em>Pac-Man</em>. It has been ported to a variety of operating systems
 using the following for user interaction: ncurses, PDcurses, XCurses,
 sysV-curses, S/Lang slcurses, Win32 console, raw stdio and termios,
-GGI, Allegro, aalib, libcaca, TWin, and Carbon.</p>
+GGI, Allegro, aalib, libcaca, TWin, and Carbon. It produces <a
+href="snap0000.txt">plain-text</a> and <a href="snap0000.html"
+>HTML</a> screenshots which may give a reasonable approximation of how
+it will look in a text terminal.</p>
 
 <p>Please refer to the <a
 href="http://sourceforge.net/projects/myman/">MyMan project page</a>
