added a CVS link

--- a/website/htdocs/index.html
+++ b/website/htdocs/index.html
@@ -24,7 +24,9 @@ it will look in a text terminal.</p>
 
 <p>Please refer to the <a
 href="http://sourceforge.net/projects/myman/">MyMan project page</a>
-at SourceForge for recent releases.</p>
+at SourceForge for recent releases. You may also <a
+href="http://myman.cvs.sourceforge.net/myman/myman/">browse the
+project's source code</a> thanks to SourceForge.</p>
 
 <p>Older versions (including the original public-domain version) can
 still be found on <a
