--- a/website/htdocs/index.html
+++ b/website/htdocs/index.html
@@ -12,15 +12,19 @@
 <h1 align="left">MyMan</h1>
 
 <p><em>MyMan</em> is a text-mode videogame inspired by <a
-href="http://www.namco.co.jp/">Namco</a>'s
-
-<em>Pac-Man</em>. It has been ported to a variety of operating systems
-using the following for user interaction: ncurses, PDcurses, XCurses,
-sysV-curses, S/Lang slcurses, Win32 console, raw stdio and termios,
-GGI, Allegro, aalib, libcaca, TWin, and Carbon. It produces <a
+href="http://www.namco.co.jp/">Namco</a>'s <em>Pac-Man</em>. It has
+been ported to a variety of operating systems using the following for
+user interaction: ncurses, PDcurses, XCurses, sysV-curses, S/Lang
+slcurses, Win32 console, raw stdio and termios, GGI, Allegro, aalib,
+libcaca, TWin, and Carbon. It produces <a
 href="snap0000.txt">plain-text</a> and <a href="snap0000.html"
 >HTML</a> screenshots which may give a reasonable approximation of how
 it will look in a text terminal.</p>
+
+<div style="float: right"><a href="myman-0.7.0.png"><img
+src="myman-0.7.0.png" width="335" height="385" border="0"
+alt="[Screenshot of myman version 0.7.0 under Mac OS X with Carbon
+output]" /></a></div>
 
 <p>Please refer to the <a
 href="http://sourceforge.net/projects/myman/">MyMan project page</a>
