--- a/website/htdocs/index.html
+++ b/website/htdocs/index.html
@@ -12,9 +12,12 @@
 
 <div style="float: right"><a href="myman-0.7.0.png"><img
 src="myman-0.7.0.png" width="335" height="385" border="0"
-alt="[Screenshot of myman version 0.7.0 under Mac OS X with Carbon
-output]" title="Screenshot of myman version 0.7.0 under Mac OS X with
-Carbon output" /></a></div>
+
+alt="[myman version 0.7.0 under Mac OS X with Carbon output]"
+
+title="myman version 0.7.0 under Mac OS X with Carbon output"
+
+/></a></div>
 
 <h1 align="left">MyMan</h1>
 
