added a zero install feed for x86 linux

--- a/website/htdocs/index.html
+++ b/website/htdocs/index.html
@@ -42,6 +42,8 @@ still be found on <a
 href="http://geocities.com/bsittler/#myman">bsittler's Home
 Page</a>.</p>
 
+<p><a href="myman.xml">Zero Install feed</a> for i486 Linux</p>
+
 <p style="text-align: center"><i><a href="http://myman.sourceforge.net/">MyMan</a> is hosted by</i>
 <br />
 <a href="http://sourceforge.net"><img
