oops! fix project id in sf logo url

--- a/website/htdocs/index.html
+++ b/website/htdocs/index.html
@@ -46,9 +46,10 @@ Page</a>.</p>
 
 <p style="text-align: center"><i><a href="http://myman.sourceforge.net/">MyMan</a> is hosted by</i>
 <br />
+
 <a href="http://sourceforge.net"><img
-src="http://sourceforge.net/sflogo.php?group_id=16684"
-width="88" height="31" border="0" alt="SourceForge Logo"></a></p>
+src="http://sflogo.sourceforge.net/sflogo.php?group_id=236995&amp;type=1"
+width="88" height="31" border="0" alt="SourceForge.net Logo" /></a></p>
 
 </body>
 </html>
