oops! xml syntax for meta

--- a/game.html
+++ b/game.html
@@ -26,7 +26,7 @@
 -->
 <html xml:lang="en" lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>MyMan (incomplete DHTML rewrite)</title>
 <link rel="icon" href="gfx/myman.png" />
 <link rel="shortcut icon" href="gfx/myman.ico" />
