--- a/game.html
+++ b/game.html
@@ -1,5 +1,5 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
- "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+ "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <!--
  game.html - game logic for the MyMan video game (incomplete DHTML rewrite)
  Copyright 1997-2008, Benjamin C. Wiley Sittler (email: bsittler@gmail.com)
