abide by new SourceForge.net logo policy

--- a/website/htdocs/index.html
+++ b/website/htdocs/index.html
@@ -44,12 +44,12 @@ Page</a>.</p>
 
 <p><a href="myman.xml">Zero Install feed</a> for i486 Linux</p>
 
-<p style="text-align: center"><i><a href="http://myman.sourceforge.net/">MyMan</a> is hosted by</i>
-<br />
-
-<a href="http://sourceforge.net"><img
-src="http://sflogo.sourceforge.net/sflogo.php?group_id=236995&amp;type=1"
-width="88" height="31" border="0" alt="SourceForge.net Logo" /></a></p>
+<p style="text-align: center"><a
+href="http://sourceforge.net/projects/myman"><img
+src="http://sflogo.sourceforge.net/sflogo.php?group_id=236995&amp;type=16"
+width="150" height="40" border="0"
+alt="Get MyMan at SourceForge.net. Fast, secure and Free Open Source software downloads"
+/></a></p>
 
 </body>
 </html>
