VMS console too

--- a/website/htdocs/index.html
+++ b/website/htdocs/index.html
@@ -22,14 +22,14 @@ title="myman version 0.7.0 under Mac OS X with Carbon output"
 <h1 align="left">MyMan</h1>
 
 <p><em>MyMan</em> is a text-mode videogame inspired by <a
- href="http://www.namco.co.jp/">Namco</a>'s <em>Pac-Man</em>. It has
-been ported to a variety of operating systems using the following for
-user interaction: ncurses, PDcurses, XCurses, sysV-curses, old BSD curses,
-old VMS curses, S/Lang slcurses, Win32 console, raw stdio and termios, GGI,
-Allegro, aalib, libcaca, TWin, and Carbon. It produces <a
- href="snap0000.txt">plain-text</a> and <a href="snap0000.html"
- >HTML</a> screenshots which may give a reasonable approximation of
-how it will look in a text terminal.</p>
+  href="http://www.namco.co.jp/">Namco</a>'s <em>Pac-Man</em>. It has
+ been ported to a variety of operating systems using the following for
+ user interaction: ncurses, PDcurses, XCurses, sysV-curses, old BSD
+ curses, old VMS curses, S/Lang slcurses, Win32 console, VMS console,
+ raw stdio and termios, GGI, Allegro, aalib, libcaca, TWin, and
+ Carbon. It produces <a href="snap0000.txt">plain-text</a> and <a
+  href="snap0000.html" >HTML</a> screenshots which may give a
+ reasonable approximation of how it will look in a text terminal.</p>
 
 <p>Please refer to the <a
 href="http://sourceforge.net/projects/myman/">MyMan project page</a>
